--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
+    "@types/react": "^18.2.0",
+    "@types/node": "^20.0.0",
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/grecaptcha": "^3.0.9",
